# esquire

./: .dockerignore  Dockerfile  LICENSE  README.md  defaultconfig.json  esquire.py  exceptions.py  jsonhandler.py  loghandler.py  main.py  pip_requirements.txt  pyproject.toml  wobbify.py
