[tool.poetry]
name = "esquire"
version = "0.1.0"
description = ""
authors = ["Olocool17"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {extras = ["voice"], version = "*"}
youtube_dl = "^2021.6.6"
spotipy = "^2.18.0"

[tool.poetry.dev-dependencies]
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
