[tool.poetry]
name = "esquire"
version = "0.1.0"
description = ""
authors = ["Olocool17"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {extras = ["voice"], version = "*"}
spotipy = "^2.18.0"
yt-dlp = "^2023.3.4"

[tool.poetry.dev-dependencies]
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
